kubernetes/apps/rancher/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
